<resources>
    <string name="app_name">SAA1</string>
    <string name="fullname">Full Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nim">NIM</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="expertise">Expertise</string>
    <string name="course">Course Subject</string>
    <string name="addlecturer">Add Lecturer</string>
    <string name="lecturerdata">Lecturer Data</string>
    <string name="lecturer_list">Lecturer List</string>
    <string name="regstudent">Register Student</string>
    <string name="img">img</string>
    <string name="editlecturer">Edit Lecturer</string>
    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="start">
        <item>07:30:00</item>
        <item>08:00:00</item>
        <item>08:30:00</item>
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end0730">
        <item>08:00:00</item>
        <item>08:30:00</item>
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end0800">
        <item>08:30:00</item>
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end0830">
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end0900">
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end0930">
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1000">
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1030">
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1100">
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1130">
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1200">
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1230">
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1300">
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1330">
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1400">
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1430">
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1500">
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1530">
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1600">
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1630">
        <item>17:00:00</item>
    </string-array>
    <string-array name="lecturer">
        <item>Lecturer</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_account">My Account</string>
    <string name="my_courses">My Courses</string>
    <string name="my_schedule">My Schedule</string>
    <string name="logout">Log Out</string>
    <string name="addcourse">Add Course</string>
    <string name="editcourse">Edit Course</string>
    <string name="editstudent">Edit Student</string>
    <string name="addstudent">Add Student</string>
</resources>
